cabal-version:      2.4
name:               free-game
version:            1.1.90
synopsis:           Create games for free
description:
  free-game defines a monad that integrates features to create 2D games.
  .
  Twitter: #hs_free_game

homepage:           https://github.com/fumieval/free-game
bug-reports:        https://github.com/fumieval/free-game/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fumiaki Kinoshita
maintainer:         Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:          Copyright (C) 2012-2013 Fumiaki Kinoshita
category:           Graphics, Monads
build-type:         Simple
stability:          experimental
tested-with:        GHC ==8.4.4 || ==8.6.5 || ==8.8.1
extra-source-files:
  CHANGELOG.md
  examples/*.hs
  examples/*.png
  examples/*.ttf

source-repository head
  type:     git
  location: https://github.com/fumieval/free-game.git

library
  default-language:   Haskell2010
  exposed-modules:
    FreeGame
    FreeGame.Backend.GLFW
    FreeGame.Class
    FreeGame.Data.Bitmap
    FreeGame.Data.Font
    FreeGame.Instances
    FreeGame.Internal.Finalizer
    FreeGame.Internal.GLFW
    FreeGame.Text
    FreeGame.Types
    FreeGame.UI
    FreeGame.Util

  ghc-options:        -Wall -fexcess-precision -O2
  default-extensions:
    CPP
    FlexibleContexts
    FlexibleInstances

  build-depends:
    , array             ^>=0.5
    , base              >=4.11   && <4.14
    , boundingboxes     ^>=0.2.3
    , colors            ^>=0.3
    , containers        >=0.5.11 && <0.6.3
    , control-bool      ^>=0.2.1
    , directory         ^>=1.3
    , filepath          ^>=1.4.2
    , free              ^>=5.1
    , freetype2         ^>=0.1.2
    , GLFW-b            ^>=3.2.1
    , hashable          >=1.2.7  && <1.4
    , JuicyPixels       ^>=3.3.4
    , JuicyPixels-util  ^>=0.2
    , lens              >=4.17   && <4.19
    , linear            ^>=1.20.9
    , mtl               ^>=2.2
    , OpenGL            ^>=3.0
    , OpenGLRaw         ^>=3.3.4
    , random            ^>=1.1
    , reflection        ^>=2.1.5
    , StateVar          ^>=1.2
    , template-haskell  >=2.13   && <2.16
    , transformers      ^>=0.5.5
    , vector            ^>=0.12
    , void              ^>=0.7.3
